2007-01-17 Sandro Santilli <strk@refractions.net>

	* tests/xmltester/: heisenbugs.xml, Makefile.am:
	  New testcase for bug fixed by previous commit.

2007-01-16 Sandro Santilli <strk@refractions.net>

	* source/index/strtree/STRtree.cpp (yComparator): 
	  Use static_cast<> and make code more readable.
	  A side effect seems to be fixing a segfault :!
	* source/headers/geos/index/strtree/STRtree.h (centreY):
	  const-corrected.
	* tests/xmltester/XMLTester.cpp: don't include catch-all headers.

2007-01-09 Sandro Santilli <strk@refractions.net>

	* source/operation/buffer/: Makefile.am, OffsetCurveVertexList.h:
	  New helper class for OffsetCurveBuilder
	* operation::buffer::OffsetCurveBuilder:
	  Move vertexlist management to external class.
	* tests/xmltester/: Makefile.am, TestBufferExternal.xml:
	  added test for above changes (imported from JTS and
	  modified to work with GEOS).
	* tests/xmltester/XMLTester.cpp: change buffer
	  validator again: check area of topological 
	  difference between expected and obtained result
	  to be smaller then 1/1000 of expected geometry
	  area.

2007-01-09 Sandro Santilli <strk@refractions.net>

	* source/geom/CoordinateArraySequence.cpp,
	  source/headers/geos/geom/CoordinateSequence.h,
	  source/headers/geos/geom/CoordinateArraySequence.h:
	  add(Coordinate, bool) made a virtual method and overrridden
	  for CoordinateArraySequence, for better performance
	  (single virtual call vs. multiple); added front() and
	  back() methods.
	* tests/xmltester/XMLTester.cpp: add areatest
	  to buffer test handler.

2007-01-04 Sandro Santilli <strk@refractions.net>

	* configure.in: prepared for version to 3.0.0rc4,
	  fixed swig python errors as suggested by hint
	  (AM_PATH_PYTHON).

2007-01-04 Sandro Santilli <strk@refractions.net>

	* configure.in, swig/geos.i.in, swig/geos.i:
	  geos.i generated at configure time from geos.i.in
	  (so we don't have to manually update versions there).

2007-01-04 dev-zero at gentoo dot org 
